--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,6 +1,7 @@
-<% if flash.has?(:message) %>
-  <%= flash[:message] %>
-<% end %>
+<%if !params[:message].nil?%>
+  <%= params[:message] %>
+<%end%>
+
 <h1>This is a song called<%= @song.name%></h1>
 <h2><a href="/artists/<%= @song.artist.slug %>"><%= @song.artist.name %></a></h2>
 <%@song.genres.each do |genre|%>
